# pyshmem

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
dist-release/: pyshare-1.0.0-py3-none-any.whl
docs/: api.rst  benchmarks.rst  conf.py  gpu.rst  index.rst  installation.rst  overview.rst  platforms.rst  release.rst  usage.rst
src/pyshare/: __init__.py  _shared.py
src/pyshmem/: __init__.py  _shared.py
tests/: conftest.py  test_benchmark.py  test_cpu_api.py  test_gpu_api.py
