[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshare"
version = "0.1.0"
description = "Unified CPU/GPU shared memory primitives for Python."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Jacob Taylor" },
]
dependencies = [
    "numpy>=1.26,<3",
    "portalocker>=3.1",
]
keywords = ["shared-memory", "numpy", "torch", "gpu", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-cov>=5",
    "ruff>=0.11",
]
gpu = [
    "torch>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyshare", "pyshare.*"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
